[tool:pytest]
testpaths = test

[flake8]
max-line-length = 80

[isort]
known_first_party = librehosters_cli
known_third_party = pytest,click
line_length = 80
multi_line_output = 3
include_trailing_comma = True
skip = .venv, .tox

[metadata]
name = librehosters-cli
author = decentral1se
author_email = lukewm@riseup.net
maintainer = decentral1se
maintainer_email = lukewm@riseup.net
url = https://git.coop/decentral1se/librehosters-cli
project_urls =
  Source Code = https://git.coop/decentral1se/librehosters-cli
  Documentation = https://librehosters-cli.readthedocs.io/
  Maintainer Support = https://lukewm.info/support/
description = Librehosters command line suite
long_description = file: README.rst
license = GPLv3
license_file = LICENSE
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Development Status :: 4 - Beta

[options]
use_scm_version = True
python_requires = !=2.7.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires =
  setuptools_scm
  setuptools_scm_git_archive
package_dir =
  = .
packages = find:
zip_safe = False
install_requires = 
  click >= 7.0 , < 8.0
  requests >= 2.21.0 , < 3.0
  tabulate >= 0.8.3 , < 1.0
  colorama >= 0.4.1 , < 1.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
  libreh = librehosters_cli.__main__:main

[build_sphinx]
all_files = 1
build-dir = documentation/build
source-dir = documentation/source
warning-is-error = True
